feat(sidebar): added padding and border to sidebar (#5221)
* feat(sidebar): added padding and border to sidebar

* feat(sidebar): rebased, updated hbs template

* feat(sidebar): updated padding mods

--- a/src/patternfly/components/Sidebar/sidebar-main.hbs
+++ b/src/patternfly/components/Sidebar/sidebar-main.hbs
@@ -1,4 +1,6 @@
-<div class="pf-c-sidebar__main{{#if sidebar-main--modifier}} {{sidebar-main--modifier}}{{/if}}"
+<div class="pf-c-sidebar__main
+  {{#if sidebar--HasBorder}} pf-m-border{{/if}}
+  {{#if sidebar-main--modifier}} {{sidebar-main--modifier}}{{/if}}"
   {{#if sidebar-main--attribute}}
     {{{sidebar-main--attribute}}}
   {{/if}}>
