--- a/src/patternfly/components/InputGroup/themes/dark/input-group.scss
+++ b/src/patternfly/components/InputGroup/themes/dark/input-group.scss
@@ -2,35 +2,21 @@
 
 @mixin pf-theme-dark-input-group() {
   .pf-c-input-group {
-    --pf-c-input-group--BackgroundColor: transparent;
-    --pf-c-input-group__text--BorderTopColor: transparent;
-    --pf-c-input-group__text--BorderRightColor: transparent;
-    --pf-c-input-group__text--BorderBottomColor: var(--pf-global--BorderColor--400);
-    --pf-c-input-group__text--BorderLeftColor: transparent;
-    --pf-c-input-group__text--BackgroundColor: var(--pf-global--palette--black-600);
+    --pf-c-input-group__item--BorderLeftWidth: var(--pf-c-input-group__item--BorderWidth--base);
+    --pf-c-input-group__item--BorderLeftColor: var(--pf-global--palette--black-700);
+    --pf-c-input-group__item--m-box--BackgroundColor: var(--pf-global--BackgroundColor--400);
+    --pf-c-input-group__item--m-box--BorderTopColor: transparent;
+    --pf-c-input-group__item--m-box--BorderRightColor: transparent;
+    --pf-c-input-group__item--m-box--BorderBottomColor: var(--pf-global--BorderColor--400);
+    --pf-c-input-group__item--m-box--BorderLeftColor: transparent;
+    --pf-c-input-group__item--m-disabled--BackgroundColor: var(--pf-global--disabled-color--200);
+    --pf-c-input-group__item--m-disabled--BorderBottomColor: transparent;
     --pf-c-input-group__text--m-disabled--Color: var(--pf-global--palette--black-100);
-    --pf-c-input-group__text--m-disabled--BackgroundColor: var(--pf-global--disabled-color--200);
 
     > * + * {
-      margin-left: 0;
-      border-left: 1px solid var(--pf-global--palette--black-700); // global var
-    }
-  }
+      --pf-c-input-group__item--m-box--BorderLeftColor: var(--pf-c-input-group__item--BorderLeftColor);
 
-  .pf-c-input-group__text {
-    --pf-c-input-group__text--BorderTopColor: transparent;
-    --pf-c-input-group__text--BorderRightColor: transparent;
-    --pf-c-input-group__text--BorderBottomColor: var(--pf-global--BorderColor--400);
-    --pf-c-input-group__text--BorderLeftColor: transparent;
-
-    &.pf-m-plain {
-      --pf-c-input-group__text--BackgroundColor: transparent;
-    }
-
-    &.pf-m-disabled {
-      --pf-c-input-group__text--BackgroundColor: var(--pf-c-input-group__text--m-disabled--BackgroundColor);
-
-      color: var(--pf-c-input-group__text--m-disabled--Color);
+      border-left: var(--pf-c-input-group__item--BorderLeftWidth) solid var(--pf-c-input-group__item--BorderLeftColor);
     }
   }
 }
