--- a/src/patternfly/components/InputGroup/input-group-text.hbs
+++ b/src/patternfly/components/InputGroup/input-group-text.hbs
@@ -2,10 +2,15 @@
   {{#if aria-label}}
     aria-label="{{aria-label}}"
   {{/if}}
+  {{#if input-group-text--id}}
+    id="{{input-group-text--id}}"
+  {{/if}}
   {{#if input-group-text--attribute}}
     {{{input-group-text--attribute}}}
   {{/if}}>
-  {{#if @partial-block}}
+  {{#if input-group-text--value}}
+    {{{input-group-text--value}}}
+  {{else if @partial-block}}
     {{> @partial-block}}
   {{/if}}
   {{#if input-group-text--HasDollarSignIcon}}
