--- a/src/patternfly/components/Toolbar/toolbar-item-search-filter.hbs
+++ b/src/patternfly/components/Toolbar/toolbar-item-search-filter.hbs
@@ -1,16 +1,20 @@
 {{#> toolbar-item toolbar-item--modifier=(concat 'pf-m-search-filter ' toolbar-item-search-filter--modifier)}}
   {{#> input-group input-group--attribute=(concat 'aria-label="search filter" role="group"')}}
-    {{#> select select--id=(concat toolbar--id '-select-name') select--width=(ternary toolbar-items-search-filter--width toolbar-items-search-filter--width '175px') select-toggle--icon="fas fa-filter"}}
+    {{#> input-group-item input-group-item--IsFill=true}}
+      {{#> select select--id=(concat toolbar--id '-select-name') select--width=(ternary toolbar-items-search-filter--width toolbar-items-search-filter--width '124px') select-toggle--icon="fas fa-filter"}}
+        {{#if toolbar-items-search-filter--text}}
+          {{{toolbar-items-search-filter--text}}}
+        {{else}}
+          Name
+        {{/if}}
+      {{/select}}
+    {{/input-group-item}}
+    {{#> input-group-item}}
       {{#if toolbar-items-search-filter--text}}
-        {{{toolbar-items-search-filter--text}}}
+        {{> text-input-group--search-input text-input-group--id="text-input-group-search-input-group" text-input-group-text-input--placeholder=(concat "Filter by " toolbar-items-search-filter--text) text-input-group--attribute='style="width: auto"'}}
       {{else}}
-        Name
+        {{> text-input-group--search-input text-input-group--id="text-input-group-search-input-group" text-input-group-text-input--placeholder="Filter by name" text-input-group--attribute='style="width: auto"'}}
       {{/if}}
-    {{/select}}
-    {{#if toolbar-items-search-filter--text}}
-      {{> text-input-group--search-input text-input-group--id="text-input-group-search-input-group" text-input-group-text-input--placeholder=(concat "Filter by " toolbar-items-search-filter--text)}}
-    {{else}}
-      {{> text-input-group--search-input text-input-group--id="text-input-group-search-input-group" text-input-group-text-input--placeholder="Filter by name"}}
-    {{/if}}
+    {{/input-group-item}}
   {{/input-group}}
 {{/toolbar-item}}
