fix(helper-text): fixed spelling/punctuation

--- a/src/patternfly/demos/Alert/alert-template-stacked-form.hbs
+++ b/src/patternfly/demos/Alert/alert-template-stacked-form.hbs
@@ -53,7 +53,7 @@
       {{#> form-label form-label--attribute=(concat 'for="' form-group--id '"') required='true'}}
         How can we contact you?
       {{/form-label}}
-      {{> form-helper-text helper-text--value='This is a requied field' helper-text-item--HasIcon=true helper-text-item--IsError=true}}
+      {{> form-helper-text helper-text--value='This is a required field' helper-text-item--HasIcon=true helper-text-item--IsError=true}}
     {{/form-group-label}}
     {{#> form-group-control form-group-control--modifier="pf-m-inline"}}
       {{#> check}}
