--- a/src/patternfly/demos/Alert/alert-template-horizontal-form.hbs
+++ b/src/patternfly/demos/Alert/alert-template-horizontal-form.hbs
@@ -9,58 +9,48 @@
       {{/alert-title}}
     {{/alert}}
   {{/form-alert}}
-  {{#> form-group}}
+  {{#> form-group form-group--id=(concat form--id '-name')}}
     {{#> form-group-label}}
-      {{#> form-label form-label--attribute=(concat 'for="' form--id '-name"') required='true'}}
+      {{#> form-label form-label--attribute=(concat 'for="' form-group--id '"') required=true}}
         Name
       {{/form-label}}
     {{/form-group-label}}
     {{#> form-group-control}}
-      {{#> form-control controlType="input" input="true" form-control--attribute=(concat 'required type="text" id="' form--id '-name" name="' form--id '-name" aria-invalid="true" aria-describedby="' form--id '-name-helper"')}}
+      {{#> form-control controlType="input" input=true form-control--attribute=(concat 'required type="text" id="' form-group--id '" name="' form-group--id '" aria-invalid="true" aria-describedby="' form-group--id '-helper"')}}
       {{/form-control}}
-      {{#> form-helper-text form-helper-text--modifier="pf-m-error" form-helper-text--attribute=(concat 'id="' form--id '-name-helper" aria-live="polite"')}}
-        Required field
-      {{/form-helper-text}}
+      {{> form-helper-text helper-text--value='Required field' helper-text-item--IsError=true}}
     {{/form-group-control}}
   {{/form-group}}
-  {{#> form-group}}
+  {{#> form-group form-group--id=(concat form--id '-email')}}
     {{#> form-group-label}}
-      {{#> form-label form-label--attribute=(concat 'for="' form--id '-email"') required="true"}}
+      {{#> form-label form-label--attribute=(concat 'for="' form-group--id '"') required=true}}
         Email
       {{/form-label}}
     {{/form-group-label}}
     {{#> form-group-control}}
-      {{#> form-control controlType="input" input="true" form-control--attribute=(concat 'type="text" value="patternfly@patternfly.com" id="' form--id '-email" name="' form--id '-email" required')}}{{/form-control}}
+      {{#> form-control controlType="input" input=true form-control--attribute=(concat 'type="text" value="patternfly@patternfly.com" id="' form-group--id '" name="' form-group--id '" required')}}{{/form-control}}
     {{/form-group-control}}
   {{/form-group}}
-  {{#> form-group}}
+  {{#> form-group form-group--id=(concat form--id '-phone')}}
     {{#> form-group-label}}
-      {{#> form-label form-label--attribute=(concat 'for="' form--id '-phone"') required='true'}}
+      {{#> form-label form-label--attribute=(concat 'for="' form-group--id '"') required=true}}
         Phone number
       {{/form-label}}
     {{/form-group-label}}
     {{#> form-group-control}}
-      {{#> form-control controlType="input" input="true" form-control--attribute=(concat 'required type="text" id="' form--id '-phone" name="' form--id '-phone" aria-invalid="true" aria-describedby="' form--id '-phone-helper"')}}
+      {{#> form-control controlType="input" input=true form-control--attribute=(concat 'required type="text" id="' form-group--id '" name="' form-group--id '" aria-invalid="true" aria-describedby="' form-group--id '-helper"')}}
       {{/form-control}}
-      {{#> form-helper-text form-helper-text--modifier="pf-m-error" form-helper-text--attribute=(concat 'id="' form--id '-phone-helper" aria-live="polite"')}}
-        Required field
-      {{/form-helper-text}}
+      {{> form-helper-text helper-text--value='Required field' helper-text-item--IsError=true}}
     {{/form-group-control}}
   {{/form-group}}
-  {{#> form-group form-group--IsCheckGroup="true" form-group--id="-check-group"}}
+  {{#> form-group form-group--IsCheckGroup="true" form-group--id=(concat form--id '-check-group')}}
     {{#> form-group-label form-group-label--modifier="pf-m-no-padding-top"}}
-      {{#> form-label form-label--attribute=(concat 'for="' form--id '-experience"') required='true'}}
+      {{#> form-label form-label--attribute=(concat 'for="' form-group--id '"') required=true}}
         Your experience
       {{/form-label}}
-
     {{/form-group-label}}
     {{#> form-group-control}}
-      {{#> form-helper-text form-helper-text--modifier="pf-m-error" form-helper-text--attribute=(concat 'id="' form--id '-simple-info-helper" aria-live="polite"')}}
-        {{#> form-helper-text-icon}}
-          <i class="fas fa-exclamation-circle" aria-hidden="true"></i>
-        {{/form-helper-text-icon}}
-          This is a requied field
-      {{/form-helper-text}}
+      {{> form-helper-text helper-text--value='This is a required field' helper-text-item--IsError=true helper-text-item--HasIcon=true}}
       {{#> check}}
         {{#> check-input check-input--attribute='type="checkbox" id="alt-checkbox1" name="alt-checkbox1"'}}{{/check-input}}
         {{#> check-label check-label--attribute='for="alt-checkbox1"'}}Follow up via email.{{/check-label}}
