fix(global): remove woff, use where with globals, cleanup

--- a/scripts/gulp/icons_template.scss
+++ b/scripts/gulp/icons_template.scss
@@ -1,7 +1,6 @@
 @font-face {
 	font-family: '<%= fontName %>';
-	src: url('#{$pf-global--fonticon-path}/<%= fontName %>.woff2<%= cacheBusterQueryString %>') format('woff2'),
-		url('#{$pf-global--fonticon-path}/<%= fontName %>.woff<%= cacheBusterQueryString %>') format('woff');
+	src: url('#{$pf-global--fonticon-path}/<%= fontName %>.woff2<%= cacheBusterQueryString %>') format('woff2');
 }
 
 @mixin <%= cssClass%>-styles {
