--- a/src/patternfly/base/_fonts.scss
+++ b/src/patternfly/base/_fonts.scss
@@ -9,8 +9,7 @@
   font-style: normal;
   font-weight: 300;
   src:
-    url("#{$pf-global--font-path}/RedHatDisplay/RedHatDisplay-Regular.woff2") format("woff2"),
-    url("#{$pf-global--font-path}/RedHatDisplay/RedHatDisplay-Regular.woff") format("woff");
+    url("#{$pf-global--font-path}/RedHatDisplay/RedHatDisplay-Regular.woff2") format("woff2");
   text-rendering: optimizelegibility;
 }
 
@@ -19,8 +18,7 @@
   font-style: normal;
   font-weight: 400;
   src:
-    url("#{$pf-global--font-path}/RedHatDisplay/RedHatDisplay-Medium.woff2") format("woff2"),
-    url("#{$pf-global--font-path}/RedHatDisplay/RedHatDisplay-Medium.woff") format("woff");
+    url("#{$pf-global--font-path}/RedHatDisplay/RedHatDisplay-Medium.woff2") format("woff2");
   text-rendering: optimizelegibility;
 }
 
@@ -29,8 +27,7 @@
   font-style: normal;
   font-weight: 700;
   src:
-    url("#{$pf-global--font-path}/RedHatDisplay/RedHatDisplay-Bold.woff2") format("woff2"),
-    url("#{$pf-global--font-path}/RedHatDisplay/RedHatDisplay-Bold.woff") format("woff");
+    url("#{$pf-global--font-path}/RedHatDisplay/RedHatDisplay-Bold.woff2") format("woff2");
   text-rendering: optimizelegibility;
 }
 
@@ -39,8 +36,7 @@
   font-style: normal;
   font-weight: 400;
   src:
-    url("#{$pf-global--font-path}/RedHatText/RedHatText-Regular.woff2") format("woff2"),
-    url("#{$pf-global--font-path}/RedHatText/RedHatText-Regular.woff") format("woff");
+    url("#{$pf-global--font-path}/RedHatText/RedHatText-Regular.woff2") format("woff2");
   text-rendering: optimizelegibility;
 }
 
@@ -49,8 +45,7 @@
   font-style: normal;
   font-weight: 700;
   src:
-    url("#{$pf-global--font-path}/RedHatText/RedHatText-Medium.woff2") format("woff2"),
-    url("#{$pf-global--font-path}/RedHatText/RedHatText-Medium.woff") format("woff");
+    url("#{$pf-global--font-path}/RedHatText/RedHatText-Medium.woff2") format("woff2");
   text-rendering: optimizelegibility;
 }
 
