--- a/src/patternfly/base/_fa-icons.scss
+++ b/src/patternfly/base/_fa-icons.scss
@@ -15,8 +15,7 @@
       font-style: normal;
       font-weight: 900;
       src:
-        url("#{$fa-font-path}/fa-solid-900.woff2") format("woff2"),
-        url("#{$fa-font-path}/fa-solid-900.woff") format("woff");
+        url("#{$fa-font-path}/fa-solid-900.woff2") format("woff2");
     }
 
     // stylelint-disable
