--- a/src/patternfly/sass-utilities/scss-variables.scss
+++ b/src/patternfly/sass-utilities/scss-variables.scss
@@ -8,10 +8,9 @@
 
 // Quickly modify global styling by enabling or disabling optional features.
 $pf-global--enable-reset: true !default;
+$pf-global--enable-normalize: true !default;
 $pf-global--enable-fontawesome-cdn: false !default;
 $pf-global--disable-fontawesome: false !default;
-$pf-global--load-pf-3: false !default;
-$pf-global--enable-shield: false !default;
 
 // Patternfly uses the default root size of the browser, it assumes a 16px base
 // since most browser root size is 16. This variables is just to make the
